--- a/style.css
+++ b/style.css
@@ -199,10 +199,8 @@ h3 {
     margin: 0 auto;
     padding: 2em 0 2em 0;
 }
-.how video {
+iframe {
     padding: .5em 0 1.5em 0;
-    width: 16.5vw;
-    height: auto;
 }
 
 footer {
@@ -272,10 +270,11 @@ footer {
     .how h3{
         text-align: center;
     }
-    .how video {
+    iframe {
         padding: .5em 0 1em 0;
-        width: 70vw;
-        height: auto;
+        margin-inline: auto;
+    }
+    ol {
         margin-inline: auto;
     }
     footer {
